# book-club

./: .dockerignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  refactoring.md
.github/actions/setup-project/: action.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
backend/src/: conftest.py
backend/src/a12n/: models.py
backend/src/app/: models.py  settings.py
backend/src/clubs/: admin.py  apps.py  models.py
backend/src/env/: .env
backend/src/users/: fixtures.py
frontend/: .env.production  .gitignore  Dockerfile  Dockerfile.dev  README.md  capacitor.config.ts  eslint.config.ts  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/.storybook/: preview.ts
frontend/android/app/: build.gradle
frontend/e2e/components/: login-form.ts
frontend/e2e/fixtures/: playwright-pages.ts
frontend/e2e/page-factory/: info-text.ts  select.ts
frontend/e2e/pages/: base-page.ts  home-page.ts
frontend/e2e/tests/: login.spec.ts  tests.ts
frontend/e2e/utils/: generic.ts  page-factory.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: Api.ts  ApiRoute.ts  data-contracts.ts  index.ts
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue  BaseButton.vue  BlobsBackground.vue  ClubFilters.vue  ClubForm.vue  ClubReviews.vue  PaginationControls.vue
frontend/src/router/: index.ts  (+1 more)
python-e2e-tests/: pyproject.toml  test_login.py
(+88 files in other folders)
