[project]
name = "python-e2e-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "victoretc",email = "vilala593@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest-playwright (>=0.8.0,<0.9.0)",
    "allure-pytest (>=2.16.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
